k8s/prerender/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prerender
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prerender
  template:
    metadata:
      labels:
        app: prerender
    spec:
      containers:
        - name: prerender
          image: vhcns5/prerender:abfb937ace67aeeb00d13be00390888b5a3cb98e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
