k8s/prerender/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prerender-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /prerender(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prerender-svc
                port:
                  number: 80
